Update ModuleImportProcessingTest.java
removed --enable-preview from @compile/process